--- a/md/知识整理.md
+++ b/md/知识整理.md
@@ -4,6 +4,7 @@
 
 
 
+
 ### css
 1. 
 
@@ -12,7 +13,7 @@
 1. forEach
 
 ### 找变量
-1. 自执行函数中
+1. 自执行函数中  不变化，为函数本身
 ```
 let a = 10;
 (function a(){
@@ -183,7 +184,7 @@ new Promise(function(resolve,reject){
 
 // .then() 中只能查函数 不是会穿透
 // 第一个then的返回值,是第二个then 的参数
-then(成功函数,失败函数)   // then中包含两个函数 (成功后的回调,失败后的可以不用写)
+then(成功函数,失败函数)   // then中包含两个函数 (成功后的回调,失败后的可以不用写,直接在.then函数之后.catch就可以)
 // 第一个then
 //      成功函数里面的参数就是异步的结果
 // 第二个then
@@ -211,8 +212,32 @@ try{
 >   - .then()中只能插函数 不是函数就穿透,穿透到下一项函数,没有的话直接穿透数字
 >   - 如果是函数,最后log接收的是最后一个函数的返回值
 #### promise.all
-> const p = PRomise.all([p1],[p2],[p3])
+> 将多个Promise实例，包装成一个新的Promise实例
+> 数组中的异步操作都要成功才返回成功结果
+> 只要有一个进入reject p的状态就变成了reject
+```
+const p = PRomise.all([p1],[p2],[p3])
+```
 
 #### promise.race
-
+> 将多个Promise实例，包装成一个新的Promise实例
+> 在数组中只要有一个异步成功就返回这次成功的结果，
+```
+let p = Promise.race([myFetch('2.json'),myFetch('1.json')])
+```
 #### promise.resolve
+> 现有对象转换成promise对象需要用到promise.resolve
+
+```
+promise.resole('foo')
+        ⬇
+new Promise(resolve => resolve('foo'))
+```
+#### promise.prototype.finally()
+> finally  方法 用于 指定不管Promise对象最后状态如何，都会执行的操作
+```
+promise
+.then(result => {···})
+.catch(error => {···})
+.finally(() => {···});
+```
