--- a/md/项目.md
+++ b/md/项目.md
@@ -96,3 +96,350 @@ $('#btn').click(function(){
     // 渐隐渐现
 })
 ```
+
+
+## 云盘 
+### 新建文件夹
+>知识点
+- select 全选+聚焦 表单的
+- placeholder =""   input的placeholder属性  可描述输入字段预期值的简短的提示信息
+- includes    includes() 方法用来判断一个数组是否包含一个指定的值，如果是返回 true，否则false。
+
+>代码
+```
+// 1. 生成内容   (最初的已经显示出来的 )
+function render(arr){
+    $('#box').html('')
+    $.each(arr,(i,item)=>{
+        // 创建文件夹
+        let $floder = $(`
+            <div  class = "floder">
+                <img src = "./img/floder-b.png">
+                <input type="text"/>
+                <p>${item.title}</p>            
+            </div>
+        `);
+        $floder.find('input').hide(); //floder下的input隐藏
+        $('#box').append($folder);  //folder放到box中
+    })
+}
+render(ary)
+
+
+// 2. 点击创建文件夹  (开始创建)
+// 先在box中创建一个folder的元素,然后当folder中的input失焦后再添加数据到ary中
+// 然后通过最新的ary渲染页面
+$('#btn').click(function(){
+    let $folder = $(`
+        <div class = "folder">
+                <img src =  "./img/folder-b.png">
+                <input type = "text" placeholder="请设置文件名" value="新建文件夹"/>
+        </div>
+    `);
+    // 插入box中
+    $('#box').append($folder)
+    /// 先插入后聚焦
+    let $txt = $folder.find('input');
+    // 选中聚焦
+    $txt.select()
+    //$txt.blur(function(){
+        //当失焦的时候把新的数据push 到ary中,并且通过新的数据渲染页面
+        /*
+            新建文件夹
+            新建文件夹(1)
+            新建文件夹(2)
+            新建文件夹(3)
+            新建文件夹(4)
+
+            新建文件夹(1).replace(/(\d\)$/,'')
+        
+        
+        
+        */
+        let val = $txt.val()
+        // 看看是否重复名
+        let bool = ary.map(item=>item.title).includes(val
+        )
+        let nval = ''
+        let num = 1
+        // 把input中value 给最新的value(最新的value就是最新的结果)
+        nval = val 
+
+        while(bool){
+            //如果重命名了那么从1开始看有没有重名
+            let s = val.replace(/(\d\)$/,'') + '('+ num++ +')';
+            bool = ary.map(item=>item.title).includs(s)
+            nval = s 
+        }
+        ary.push{
+            id:+new Date
+            title:nval
+        }
+        render(ary)
+    })
+})
+
+
+```
+### 文件操作 folders 
+> 先渲染第一层  ( id:当前id  pid:上一级的id)
+
+
+#### 获取
+```
+const $f_empty = $('$f_emptyf_empty')  // 显示隐藏空文件夹
+const $folders = $('.folders')   //放文件夹的盒子
+const $checkedAll = $('#checkedAll')
+
+
+```
+
+
+
+#### 工具方法
+> 知识点
+- ary.flter     map
+
+
+
+```
+let tools = (function(){
+    // 通过父级id去寻找子级
+    function getChild(data,id = 0){
+        //看下data下有没有这个id ,如果没有传入的id就return空null
+        if(!data[id])return null
+
+        let ary = object.keys(data)   // [0,2,1,3]    //拿到了每个key值
+
+        // 看data下的item中的pid是不是属于id
+        return ary.filter(item=>data[item].pid === id).map(item=>data[item])
+
+    }
+
+    // 专门用来找一个上级 getParent
+    functio getParent(id){
+        // data[id].pid 是个数字 data[data[id].pid]
+        if(data[id].pid*1 !== -1)return null  //到
+
+
+        return data[data[id].pid] //父级的数据
+    }
+
+    //  // 找一堆的上级  要递归  getParents
+    function getParents(d){
+        // d.id =>当前数据  当前数据的id=>
+        let pdata = getParent(id)  // 父级数据 padta  通过传来的id找当前父级
+        let ary = [daa[id]]   // 先把自己存进去
+
+        // 一直循环到padta 为null
+        while(pdata){
+            ary.unshift(pdata);    // 把每一次的父级都存到ary中
+            pdata = getParent(pdata,id)  //每次都要改变padta
+        }
+        <!-- console.log(ary) -->
+        return ary
+    }
+
+
+    return {
+        getChild
+    }
+
+
+})()
+
+```
+#### 渲染(双击点进去)
+> 知识点
+- div.ondblclick =      // 双击点进去
+- attr() 设置或返回被选中元素的属性值
+
+
+```
+function render(num = 0 ){
+    
+    $folders.html('')  /先空
+
+    let d = tools.getchild(data,num)
+    
+    list = d; // 每次render 的时候都最好把最新的当前需要显示的数据更新
+
+    //没有length 就是没有子级
+    if(!d.length){
+        $f_empty.show)
+        return
+    }
+
+    $f_empty.hide()
+
+    
+    let every = true 
+
+
+    $.each(d,(i,item)=>{
+        // 只要有一个数据的布尔值为false,就不可能全部选中,只要不是全部选中,那么checkall就不能打勾
+        if(!item.checked){
+            every = false
+            $checkedAll.removeClass('checked')
+        }
+
+        const {checked,id} = item
+
+
+        // 存一下数据id data.id="${item.id}"
+        let $folder = $(`<div class = "file-item ${checked?'active':''} did="${id}">
+                <img crc = "img/folder-b.png" alt = ""/>
+                <span class = "folder-name">${ttle}</span>
+                <input type="text" value="${title}" calss = "editor" >
+                <i class = ${checked?"checked":''}></i>
+            </div`)
+
+        let $img= $folder.find('img')
+        let $i = $folder.find('i')
+
+        $i.click(function(){
+            data[id].checked = !data[id].checked
+            render(num)
+            // 选中以后点进去再出来 选中还在 需要关闭checked  因为还要render 所以去render里加
+
+        });
+        
+        // 双击点进去图片清掉选中
+        $img.dblclick(functon(){
+            let id = $(this).parent().attr('did')*1
+            //只要双击进文件夹,先把当前对应数据的布尔值清掉
+            d.forEach(item => item.checked = false);
+            $checkedAll.removeClass('checked');//清掉全选
+            render(id)
+            createMenu(id) //为了联动面包屑
+            
+
+
+        })
+
+
+        <!-- $folders.append($folder)
+
+        // 找folder下的img
+        let $img = $folder.find('img');
+        // 双击点进去
+        $img.ondblclick = (function(){
+            //拿到id
+            render($(this).parent.attr('did')*1)
+        })
+
+        $foldersappend($folder)
+
+        // 只要every 就是全部选中 
+        if(every){
+            $checkAll
+        } -->
+    })   
+}
+render(0)
+
+```
+#### 面包屑  breadmenu
+```
+//['微云','我的音乐','zjl','发如雪']
+// 方法1.push   2. 
+
+```
+const {getParents} = tools
+
+const $breadnNav = $('.bread-nav')
+
+// 先设置个list   全局 
+let list = null
+
+function creatMenu(id){
+    //上来清理一波面包屑
+    $breadNav.html('')
+    let 
+
+}
+
+
+```
+
+
+
+```
+
+
+#### 选中 checked
+
+
+
+#### 删除
+> .some  去判断至少要有一个文件被选中,如果都没有被选中,说明找不到要删除的文件
+```
+const $del = $('#del')
+
+
+//找到页面中为true 的 被勾的
+$del.click(function(){
+    //其他域里要拿到变量     传参或者设置全局
+    //过滤一下list
+    if(list.some(item=>item.checked)){
+        let pid = list[0].pid  //为了删除数据之后,重新渲染页面使用
+
+        list.forEach(item=>{
+            if(item.checked){
+                delete data[item.id]
+            }
+        });
+        render(pid) //必须要拿到pid
+    }else{
+        alert('请选择文件')
+    }
+})
+
+
+```
+
+#### 重命名 
+> $txt.css('display')
+> $txt.focus()    
+
+```
+$rename.click(function(){
+    // 拿到数据
+    let data = list.filter(item=>item.checked)
+
+    if(list.some(item=>item.checked)&& reData.length === ){
+        console.log(reData)
+
+        let $folder = $folders.find('.active')
+        let $span = $folder.find('apsn')
+        let $txt = $folder.find('input')
+         // 强行block
+        $txt.css('display','block');
+        $txt.focus()
+
+        //加失焦事件
+        $txt.blur(function(){
+            //不能重名
+            /*
+            1.用户修改了吗,没有修改就不动,有就修改
+            2.有没有重名
+            
+            */
+            let val = $txt.val()
+            if($span.text=== val){
+                $span.show()
+
+            }
+        })
+
+
+    }else{
+        alert('请选择文件')
+    }
+
+
+})
+
+
+
+```
