--- a/md/知识整理.md
+++ b/md/知识整理.md
@@ -156,7 +156,7 @@ let nowtime = +new Date
 let nowtime = Date.now()
 让时间变成字符串 时间戳  不再显示一团报时
 ```
-- 字符串
+> #### 字符串
  
 ```
 {
@@ -166,6 +166,8 @@ let nowtime = Date.now()
 json[key]={}
 ```
 ****
+> #### 正则
+-     <input type="text" placeholder="请输入纯数字" pattern="\d+" title="请输入纯数字"/>
 
 > ### ES6
 
@@ -680,27 +682,79 @@ property 运动的属性
 > ####  动画帧   requestAnimationFrame
 -  采用系统时间间隔,保持最佳绘制效率,不会因为间隔时间过短,造成过度绘制,增加开销,也不会因为降额时间太长,使用动画卡顿不流畅,让各种网页动画效果能够有一个统一的刷新机制,从而节省系统资源,提高系统性能,改善视觉效果
 
+
+- 优点:
+    会把每一帧中的所有DOM操作集中起来,在一次重绘或回流中就完成,并且重绘或者回流的时间间隔仅仅跟随浏览器的刷新频率
+
+    在隐藏或者不可见的元素中,
+    requestAnimationFrame 将不会重绘或者回流,这当然就意味着更少的cpu、Gpu和内存使用量
+
+    requestAnimationFrame 是由浏览器专门为动画提供的API,在运行时浏览器会自动优化方法的调用,并且如果页面不是激活状态下的话,动画会自动暂停,有效节省了CPU开销
 ```
-    优点:
-        会把每一帧中的所有DOM操作集中起来,在一次重绘或回流中就完成,并且重绘或者回流的时间间隔仅仅跟随浏览器的刷新频率
+//写一个有名自执行函数，里面使用requestAnimationFrame
+在里面调用有名自执行函数  
+//也有一个返回值，返回值数字（编号)
+let timer;
+box.onclick = function(){
+    (function move(){
+        timer = requestAnimationFrame(function(){
+            box.style.left = box.offsetLeft + 10 + 'px';
+            move();
+        })
+    })();
+}
 
-        在隐藏或者不可见的元素中,
-        requestAnimationFrame 将不会重绘或者回流,这当然就意味着更少的cpu、Gpu和内存使用量
-
-        requestAnimationFrame 是由浏览器专门为动画提供的API,在运行时浏览器会自动优化方法的调用,并且如果页面不是激活状态下的话,动画会自动暂停,有效节省了CPU开销
+btn.onclick = function(){
+    cancelAnimationFrame(timer);
+}
 
 ```
-> cancelAnimatonFrame(编号) 关闭动画
+
+
+`cancelAnimatonFrame(编号)` 关闭动画
 
 ***
 ***
 
 > #### js运动
-- c 总长度
-- t 当前走了多少时间
-- d 总时间
-- b 初始的距离
+    c 总长度
+    t 当前走了多少时间
+    d 总时间
+    b 初始的距离
 
+    c*(t/d) + b; 
+    当前走了多少时间(动) / 总时间(固定的) * 总长度(固定的) + 初始的距离(固定的)
+
+```
+box.onclick = function (){
+    // alert(1)
+    move(box,1000,1000,'left');
+}
+
+/*
+    定时器用运动容易掉帧，而且性能会差，所以使用requestAnimationFrame
+*/
+
+function move(obj,c,d,attr){
+    var timer;
+    var t = 0;
+    var b = parseFloat(getComputedStyle(obj)[attr]); //带单位
+    c = c - b; //总长度 - 开始的位置 = 应该走的步长
+    (function start(){
+        timer = requestAnimationFrame(function (){
+            start();
+            t += 16.7;//每16.7毫秒走了多少时间
+            //如果当前的时间大于等于总时间，那么就让当前时间等于总时间,为了让停下来的距离和设置距离一致
+            if(t >= d){
+                t = d;
+                cancelAnimationFrame(timer);
+            }
+            obj.style[attr] = Tween.linear(t, b, c, d) + 'px';//c*(t/d) + b + 'px'; //在当前时间走了多少步长
+        });
+    })()
+}
+
+```
 
 
 ***
@@ -711,3 +765,20 @@ property 运动的属性
  - M : model 数据
  - V : vuew 视图
  - C : controller 控制器 {(js)
+
+
+
+
+> ### 组件
+> #### 选择控件
+    如何拿到用户传入的数据？
+
+    在file控件元素下有一个files属性，files[0]就是上传的数据
+    ```
+    <input type="file" multiple name="" id="file" /><button id="btn">按钮</button>
+
+    btn.onclick = function(){
+        // console.dir(file.files[0]);
+        console.dir(file.files.length);
+    }
+    ```
