--- a/md/知识整理.md
+++ b/md/知识整理.md
@@ -378,12 +378,19 @@ let a = 10;
 
 
 ***
-***
+
+
+> ### 转化
+- 对象转&拼接 console.log(''+ obj)
+
+
+
+
 ***
 > ### 事件
 - `ev.target`  事件源 源头
 
-***
+
 ***
 > #### onload  12.07
     当静态文件加载完后执行事件中的代码         
@@ -612,7 +619,7 @@ box.ontouchend = function(){
         },       
         dataType:'jsonp',
         success:function(data){
-            console.log(data)
+            console.log(data) 
             data.foreach(item=>{
                 let $li = $('<li>'+ietm.q+'</li>');
                 $('#ul').append($li);
@@ -1009,7 +1016,17 @@ function move(obj,c,d,attr){
     ```
 > ### fetch
 
+> #### fetch 的post 
+    fetch(url,{
+        metchod:'post',
+        headers:{
 
+        },
+        body:'key=val&key2=val2',
+        也可以写成
+        body:''+new URLSea
+    })
+- 需要请求本体body
 
 > ### AJAX  => 前后端数据交互的技术  12.14
 
@@ -1223,8 +1240,17 @@ function move(obj,c,d,attr){
 - `onload`          // 请求成功
 - `onprogress`      // 上传
 - `onreadystatechange`    // 监听状态的变化 存储函数 ready
+    - 是可以监听发送请求的状态
+    - 5次状态 0-4，但是0你永远都监听不到，1-4
+    - 放到send之前能够多监听一c次
+    - 放到send之后就少监听一次
+        -  0: 请求未初始化
+        -  1: 服务器连接已建立
+        -  2: 请求已接收
+        -  3: 请求处理中
+        -  4: 请求已完成，且响应已就绪
 
-- `readstate`       // 状态进行到了哪一步, 0-4 一共5步, 状态为4的时候请求完成 0监听不到
+- `readstate`       // 状态进行到了哪一步, 0-4 一共5步, 状态为4的时候请求完成 0永远监听不到
 
 - `reponseText`     // 后端返回的数据
 - `responseXML`     // xml 的 document对象
@@ -1243,7 +1269,40 @@ function move(obj,c,d,attr){
 - `created:function(){}`    //当ajax请求的时候
 - `unmount:function(){}`    // 当ajax请求完毕
 
+> ##### 请求头和响应头
 
+
+> #### http
+- 1-6开头状态码
+- 1 消息
+- 2 成功  200-207为成功
+- 3 重定向  
+    301 永久重定向
+
+    302 请求的资源临时从不同的 URI响应请求。由于这样的重定向是临时的，客户端应当继续向原有地址发送以后的请求。只有在Cache-Control或Expires中进行了指定的情况下，这个响应才是可缓存的
+
+    304 如果客户端发送了一个带条件的 GET 请求且该请求已被允许，而文档的内容（自上次访问以来或者根据请求的条件）并没有改变，则服务器应当返回这个状态码。304响应禁止包含消息体，因此始终以消息头后的第一个空行结尾。
+
+    305 需要代理
+
+    307 请求的资源临时从不同的URI 响应请求
+
+
+- 4 请求错误
+    前端的锅
+    400 Bad Request
+        1、语义有误，当前请求无法被服务器理解。除非进行修改，否则客户端不应该重复提交这个请求。
+        2、请求参数有误。
+    401 Unauthorized
+        当前请求需要用户验证。
+
+    403 Forbidden
+        服务器已经理解请求，但是拒绝执行它
+    404 请求失败
+
+
+- 5、6 服务器错误
+    只要出现5后端的问题
 
 
 > ### 服务器    12.13
@@ -1263,3 +1322,11 @@ function move(obj,c,d,attr){
         - 不能直接运行文件 ,不能在本地打开,要用localhost 的方式打开
 - `代码放到public下`
 
+> ### 浏览器
+- IE9 以下的浏览器是不支持on load的,但是所有的浏览器都支持onreadstatrchange  
+    实可咦监听发送请求的状态
+- json.parse 不支持低版本浏览器  
+    eval 支持  
+        - 尽量把能够转成js运行的代码尽量转了
+    eval不能用
+        - 就new function
