--- a/md/知识整理2.md
+++ b/md/知识整理2.md
@@ -1,17 +1,17 @@
-> ## webpack
+ ## webpack
     自动化构建工具,项目构建,打包处理,转换让浏览器支持的语法
     https://www.webpackjs.com/concepts/ 官网
 
     <div id="box"></div> -> <div id=box></div>
 
-> ### 四个核心概念
+ ### 四个核心概念
     entry   入口
     output  输出
     loder   模块的源代码进行转换
     plugins 插件
  
 - entry
-    ```
+   ```
         entry:'./2.js',  字符串，单入口
         entry:['./2','./1'], //多入口单出口
         output:{
@@ -26,12 +26,13 @@
             filename:'[name].[hash:8].js'  
         }
         name就表示entry的key
-
-    ```
+	```
+    
+	
 - 输出(output)
 - loader
     模块的源代码进行转换
-    ```
+   ```
     module:{
         rules:[
             {
@@ -40,22 +41,22 @@
             }
         ]
     }
-    ```
+   ```
 - 插件(plugins)
-plugins:[new HTML({}),new Xxx()]
+	plugins:[new HTML({}),new Xxx()]
 
-> ### wabpack 安装
--   npm i webpack webpack-cli --golbal  （第一次安装需要那么做）
--   项目目录名称千万不要写webpack
--   npm init -y(到你项目的目录中输入)
--   npm i webpack webpack-cli --save   （只要安装过，就不用安装上面那句话了）
+ ### wabpack 安装
+- npm i webpack webpack-cli --golbal  （第一次安装需要那么做）
+- 项目目录名称千万不要写webpack
+- npm init -y(到你项目的目录中输入)
+- npm i webpack webpack-cli --save   （只要安装过，就不用安装上面那句话了）
 - npm install --save-dev webpack (局部安装)  yarn add webpack --dev(局部安装)
 ```
-    package.json中找到scripts
-    "scripts": {
-        "dev":"webpack"
-    }
-    npm run dev     yarn run dev
+	package.json中找到scripts
+	"scripts": {
+		"dev":"webpack"
+	}
+	npm run dev     yarn run dev
 ```
 - 手动创建一个 webpack.config.js 文件
 - mode: production生产模式（打包上线，压缩，优化体积）  
@@ -65,11 +66,11 @@ plugins:[new HTML({}),new Xxx()]
 
 
 
-> ### 设置package.json 文件
+ ### 设置package.json 文件
     找到scripts 设置值为 "build（自定义名称）":"webpack"
     到命令行输入npm run build
 
-> ### mode设置
+### mode设置
     production  生产环境   让用户看的
     development 开发环境   让程序员看的
 
@@ -83,11 +84,11 @@ plugins:[new HTML({}),new Xxx()]
         打包之后不会处理这个里面的代码
 
 
-> ### loader
+ ### loader
     - loader 让 webpack 能够去处理那些非 JavaScript 文件（webpack 自身只理解 JavaScript）。loader 可以将所有类型的文件转换为 webpack 能够处理的有效模块
     - 用于对于魔化的源代码进行转换, 可以是你在import或者加载模块时预处理文件
 
-> ### dev-server
+### dev-server
     - webpack-dev-server
 
 
@@ -109,7 +110,7 @@ plugins:[new HTML({}),new Xxx()]
     // - 尽量避免 exclude，更倾向于使用 include
 
 ```
-> ## 要用的插件
+## 要用的插件
 - 要用的插件和loder
     `webpack` 
     `webpack-cli` 
@@ -128,7 +129,7 @@ plugins:[new HTML({}),new Xxx()]
 
 
 
-> ## 启用数据库
+## 启用数据库
 方法:
     1.	需要安装node / mongoDB    https://www.mongodb.com/ 安装
 
@@ -149,9 +150,12 @@ plugins:[new HTML({}),new Xxx()]
 
 	nrm use cnpm  切换镜像
 
-> ## vue
+## vue
     单项流动
-    MVVM框架  
+    双向数据绑定
+    渐进式框架  -> 弱主张性    逐渐学习的，有过程的学习
+    响应式框架 -> 通过修改数据 视图自动发生变化
+    MVVM框架   -> 数据映射视图 数据驱动
     Model  View  ViewModel(视图模型) 
     M-Model  V-View  C-Control
 
@@ -183,69 +187,142 @@ plugins:[new HTML({}),new Xxx()]
     vue-cli
 
 
-> ### 使用
+### 使用
     new Vue({
-        el:'#挂载的元素名',
+        el:'#挂载的元素名',  //不能挂body和html
         data:{
             在new Vue中data的值是一个**对象**，对象里面就可以设置初始化的数据
+        },
+        methods:{
+            //专门放函数的 ,一般是事件函数
         }
     })
 
-    new
-> #### 指令:
-- `v-if`
+- 引vue
+- 在html里挂载一个根元素
     ```
-    v-if="数据|条件"  ture渲染在页面 false 不渲染在页面
+        <div id="app"></div>
+    ```
+- 实例化vue  -> new Vue({})
+
+- 配置参数
+    - el:'挂载元素',
+    - data（存数据）:在**new Vue**下值为***对象***
+
+- 输出数据用 双花括号 {{放数据名称即可}} 小胡子
+
+### 指令:
+    为了方便开发者开发,vue中使用了指令
+    指令包含了很多元素身上的属性和js 的一些内置方法
+
+    指令是带有 v- 前缀的特殊属性。
+    指令用于在表达式的值改变时，将某些行为应用到 DOM 上
+#### v-if   条件渲染
+    ```
+    v-if="数据|条件"  看布尔值 ture,渲染在页面; false,不渲染在页面
     v-else-if="数据|条件"
     v-else
 
     注意:v-else前一兄弟元素必须有 v-if 或 v-else-if。
     如果触发频繁会影响性能
     ```
-- `v-show`
+#### v-show=true 显示
     ```
-    v-show="条件" -> 成立: display:block
+    简单切换元素的css属性 dispaly
+
+    v-show="条件" => 成立: display:block
     否则为none 尽量用这个
+
+    当属性是true,则显示当前元素, 如果为false,隐藏元素
     ```
-- `v-text`  -> innerText
-- `v-html`  -> innerHTML
-- `v-for`
+#### v-text  
+	v-text  -> innerText
+#### v-html  
+	v-html  -> innerHTML
+#### v-for
+    v-for="(val,key) in 数据"
+    遍历对象或者数组 
     ```
     v-for="val in data"  数组  val就是数组中的值
-    v-for="(val,attr) in data" 
+    v-for="(val,key) in data" 
         如果是数组 val就是数组中的值，key就是索引
-        如果是对象，val值，attr名
+        如果是对象，val 是键值，key 键名
     ```
-- `v-on` 不带on事件名
-    - 缩写:@ 比如: @click
-    - 修饰符:
-        - 为了方便 Vue 的事件处理，Vue 中增加了事件修饰符；
-        - 用法：v-on:事件名.修饰符
-        ```
-        .13 || .enter 回车
-        .stop  阻止冒泡
-        .prevent 阻止默认行为
-        ....
-        ```
-    - `事件函数应该写在 methods 中`
-        ```
-        new Vue({
-            methods:{
-                方法1,
-                方法2
-            }
-        })
-        
-        ```
-    - `事件中可以绑定函数`
+#### v-on 
+	不带on事件名
+- 缩写:`@` 比如: @click
+- `修饰符`:
+	- 为了方便 Vue 的事件处理，Vue 中增加了事件修饰符；
+	- 用法：v-on:事件名.修饰符
+	```
+	.13 || .enter 回车
+	.stop  阻止冒泡
+	.prevent 阻止默认行为
+    .enter
+    .prevent
+    .conce
+	....
+	```
+- `事件函数应该写在 methods 中`
+	```
+	new Vue({
+		methods:{
+			方法1,
+			方法2
+		}
+	})
+	
+	``` 
+- `事件中可以绑定函数`  `传参`
+    - @click = "fn"  fn没有参数, 默认的参数是event
+    - @click = "fn(key)"  fn 有参数,那么key就是传进来的参数
+    - 如果又要传参又想获取event ,那么需要在函数调用中写`$event`
+        - @click="fn(key,$event)"
+        > onClick = {this.click}
+        > @click = {fn}
+        > methods['fn']=function(){}
 
-- `v-bind`  绑定行间属性
-    - 缩写:   :   
-    - 如果属性为value="",src="",href=""...  里面的值是静态的,(写死那么不需要v-bind)
+
+	- 如果不传参,第一个参数就是事件对象
+	- 如果传了参还想拿到事件对象,需要在模板的事件函数内传一个$event
+- `解绑事件`
+    ```
+        @mousedown = "off & down($event)"
+        当onoff是真的就添加事件,假的就解除事件
+    ```
+
+#### v-bind  
+	如果属性需要动态操作使用 
+	绑定行间属性 属性中的值用 
+- 缩写:   :   
+- 如果属性为value="",src="",href=""...  里面的值是静态的,(写死那么不需要v-bind)
+	```
+	<div v-bind:class="{'class1': use}">    
+	v-bind:class 指令 
+
+	data:{
+		use: false
+	}
+
+	判断 class1 的值，如果为 true 使用 class1 类的样式，否则不使用该类：
+	```
+
+#### v-model
+	表单数据绑定
+	可以用 v-model 指令在表单 <input>、<textarea> 及 <select> 元素上创建双向数据绑定
+- v-model 在内部为不同的输入元素使用不同的属性并抛出不同的事件：
+	- text 和 textarea 元素使用 value 属性和 input 事件；
+	- checkbox 和 radio 使用 checked 属性和 change 事件；
+	- select 字段将 value 作为 prop 并将 change 作为事件。
+
+- 文本
 
 
+### 计算属性
+setAry 默认是 getter 
 
-> ### 组件
+
+### 组件
     在Vue中有一个component的方法来创建组件。
 
     ```
@@ -260,20 +337,39 @@ plugins:[new HTML({}),new Xxx()]
         })
     ```
 - 注意:
-    方法必须写new Vue的上面
-    要记得插入子组件
-    data的值为函数，这个函数必须返回一个对象，对象的值就是初始化数据
-    组件的名字要么小写，要么烤串命名
-    组件顶层只能有一个元素
+    - 方法必须写new Vue的上面
+    - 要记得插入子组件
+    - data的值为函数，这个函数必须返回一个对象，对象的值就是初始化数据
+    -组件的名字要么小写，要么烤串命名
+    -组件顶层只能有一个元素
 
     烤串命名:get-by-id
     驼峰命名:getById
-> ### 双向数据绑定
+ ### 双向数据绑定
     通过vue 模板语法, 把vue 中 data里面的数据绑定到页面中,
     如果我们修改这个数据,页面中绑定这个数据的地方都会跟着自动更新
 
-> ### 子组件的数据流动
+- `双向数据绑定原理`
+    - vue利用的`Object.defineProperty` 这个方法遍历data中所有的属性,
+    - 给每个属性增加了一个 `setter` 和 `etter` 方法,
+        - 当数据发生变化的时候会触发setter方法
+
+        - 当获取数据时,会触发getter方法
+    - Object.defineProperty 在IE8 一下不兼容, 所以vue只能在IE9以上使用
+	```
+	Object.defineProperty({
+		value:  ,
+		weitable:false
+		<!-- 属性不可被修改 -->
+	})
+	
+	```
+
+### 子组件的数据流动
     vue是单项数据流动
     父级的数据传递给子级,
     如果需要通过操作子级修改数据只能是父级修改
     (因为数据是从父级流向子级的,子级是不能流动数据给父级的)
+	
+	
+	
