--- a/md/知识整理2.md
+++ b/md/知识整理2.md
@@ -200,7 +200,7 @@
 
 - 引vue
 - 在html里挂载一个根元素
-    ```
+    ```r
         <div id="app"></div>
     ```
 - 实例化vue  -> new Vue({})
@@ -277,6 +277,7 @@
     - @click = "fn"  fn没有参数, 默认的参数是event
     - @click = "fn(key)"  fn 有参数,那么key就是传进来的参数
     - 如果又要传参又想获取event ,那么需要在函数调用中写`$event`
+		$event 事件对象
         - @click="fn(key,$event)"
         > onClick = {this.click}
         > @click = {fn}
@@ -309,7 +310,9 @@
 
 #### v-model
 	表单数据绑定
+	只要遇到了表单元素,就要思考下是否使用v-mdel
 	可以用 v-model 指令在表单 <input>、<textarea> 及 <select> 元素上创建双向数据绑定
+	绑 v-model的目的: 想让用户操作界面的时候,帮我操作数据
 - v-model 在内部为不同的输入元素使用不同的属性并抛出不同的事件：
 	- text 和 textarea 元素使用 value 属性和 input 事件；
 	- checkbox 和 radio 使用 checked 属性和 change 事件；
@@ -320,7 +323,9 @@
 
 ### 计算属性
 setAry 默认是 getter 
-
+- computed ,
+	- 上来就执行一次,数据发生了变化也会继续执行
+	- 可以为一个对象 里面有一个get
 
 ### 组件
     在Vue中有一个component的方法来创建组件。
@@ -348,6 +353,8 @@ setAry 默认是 getter
  ### 双向数据绑定
     通过vue 模板语法, 把vue 中 data里面的数据绑定到页面中,
     如果我们修改这个数据,页面中绑定这个数据的地方都会跟着自动更新
+	
+	Object.defineProperty(obj, prop, desc)	数据拦截(劫持)
 
 - `双向数据绑定原理`
     - vue利用的`Object.defineProperty` 这个方法遍历data中所有的属性,
@@ -361,7 +368,29 @@ setAry 默认是 getter
 		value:  ,
 		weitable:false
 		<!-- 属性不可被修改 -->
+		enumerable:false, //属性是否可以被枚举
+		configurable:false, //是否可以被删除
+		get(){
+	         //当读取这个属性的时候触发
+	         console.log('读了');
+	        //return后的内容就是读操作后的结果（必须写return）
+	         return num;
+		 },
+		 set(val){
+			 //当写操作（这个属性）的是时候触发(可以没有return的)
+			 console.log('也来了')
+			 // console.log(val);//5
+			 num = val;
+	     }
 	})
+	
+	
+	let num = 0;
+	Object.defineProperty(obj, 'age', {
+		get(){
+			return num += 2.6
+		}
+	});
 	
 	```
 
