--- a/md/知识整理2.md
+++ b/md/知识整理2.md
@@ -400,5 +400,11 @@ setAry 默认是 getter
     如果需要通过操作子级修改数据只能是父级修改
     (因为数据是从父级流向子级的,子级是不能流动数据给父级的)
 	
-	
-	
+    
+
+
+
+### cli
+
+> App.vue
+> - vbase
