--- a/md/知识整理2.md
+++ b/md/知识整理2.md
@@ -408,3 +408,100 @@ setAry 默认是 getter
 
 > App.vue
 > - vbase
+
+
+> 安装
+    npm install -g @vue/cli
+    yarn global add @vue/cli
+> 创建一个项目
+    vue create app
+    
+### 生命周期
+    create 可以做ajax请求
+    mounted 可以进行DOM操作
+    destroyed 可以解除一些定时器,事件监听
+
+> beforeCreate  初始化之前   拿不到数据
+    ajax请求的时候就在这使用
+> created       初始化之后   可以拿到data中的数据
+    如果没有挂载元素,就没有下面的生命周期
+> beforeMount   渲染之前
+> mounted       渲染之后
+    下面两个都是数据更新之后
+> beforeUpdate  DOM更新之前
+> updated       DOM更新之后
+
+> beforeDestory 销毁之前
+> destoryed     销毁之后
+
+某个条件成立,触发这些事件
+
+### router
+
+#### 动态路由
+    $route  后去路由的信息 (属性) this.$route.params
+    $router 跳转路由的方法 (方法)
+
+    主体一样,但是部分内容不一样,可以使用动态路由
+- 写法:
+    - /about/:id
+    - 匹配下面几种路由 
+- 使用:
+    - $route.params.id
+    - 切换的时候不会触发一些钩子函数,比如created,可以使用watch监听
+    ```
+        watch:{
+          '$route'(){
+
+          }
+        }
+
+    ```
+
+
+#### 嵌套路由
+    在路由配置中使用children:[{path:'x'}]    匹配的是/parent/x
+    注意的是parent组件中需要协商router-view 要不子组件渲染不出来
+    如果进入parent下没有指定的children,又要默认添加一个组件,可以在path上写个''
+
+
+#### 导航守卫
+    编程导航:
+      $router.push()
+      $router.replace()
+      $router.go()
+
+    可以传字符串和对象 
+    '/'
+    {
+        path:'/'
+        name:'home',
+        query:{
+        name:'白晓'   -> /?name=白晓
+        },
+        params:{
+        nn:'白晓'  -> 注意的是路由上不会显示nn，但是可以通过$route.params.nn去获取
+        }
+    }
+
+    重定向:
+    { path: '/a', redirect: { name: 'foo' }}
+
+    路由传参:
+    可以在路由配置项中配置一个props,如果为true，那么子组件可以通过
+    props去接收parmas参数
+        可以看Home.vue中的 p4
+
+
+  next(); 执行之后的路由跳转
+  next(false) 中断路由跳转
+  next('/') 等同于push  或者使用  next({ path: '/' })
+
+  如果有全局和局部，那么全局优先级大
+
+  全局的beforeEach(要切换路由的时候触发)
+
+  组件中的beforeRouteLeave 离开组件的时候触发
+  复用组件使用beforeRouteUpdate去进行监听
+
+  路由中的beforeEnter 进入路由的时候触发
